[gd_scene load_steps=17 format=3 uid="uid://b11yynlts526t"]

[ext_resource type="Script" path="res://tutorial_3_target.gd" id="1_jos13"]
[ext_resource type="PackedScene" uid="uid://hbrjciajmnpf" path="res://scrolling_background.tscn" id="2_g0mei"]
[ext_resource type="PackedScene" uid="uid://bifvuippivy7t" path="res://progress.tscn" id="3_fbry8"]
[ext_resource type="PackedScene" uid="uid://bmba1pqq4wqxb" path="res://menu_icon.tscn" id="4_ib1uf"]
[ext_resource type="Texture2D" uid="uid://b7e4ndhm2g66m" path="res://assets/sprites/menu_icon_background.png" id="5_wyxyw"]
[ext_resource type="Texture2D" uid="uid://cejxu0bh2fvbc" path="res://assets/sprites/menu_icon_foreground.png" id="6_0w6xn"]
[ext_resource type="PackedScene" uid="uid://cg0xtfp4bp48s" path="res://scale_and_sound.tscn" id="7_l1ogx"]
[ext_resource type="PackedScene" uid="uid://dfmg6das6l6cp" path="res://click_to_change_scene.tscn" id="8_7vhxh"]
[ext_resource type="PackedScene" uid="uid://bx5qekwsln2yr" path="res://palette_listener.tscn" id="9_rqqa1"]
[ext_resource type="PackedScene" uid="uid://c6tacpe7tp1de" path="res://animated_button.tscn" id="10_p13dj"]
[ext_resource type="Texture2D" uid="uid://b8fju5rcmx24c" path="res://assets/sprites/target.png" id="10_qsdly"]
[ext_resource type="PackedScene" uid="uid://d1q80rolx3cja" path="res://zones.tscn" id="11_r8dxh"]
[ext_resource type="PackedScene" uid="uid://dftsvelpx2cta" path="res://fade_transition.tscn" id="12_wnn4v"]
[ext_resource type="PackedScene" uid="uid://cwhy67donfiqv" path="res://shaker.tscn" id="13_mqpfc"]
[ext_resource type="PackedScene" uid="uid://bpfj34u8qsxra" path="res://target.tscn" id="14_7olmj"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ypwvg"]
random_pitch = 1.5

[node name="Tutorial_3_target" type="Node2D"]
script = ExtResource("1_jos13")
metadata/_edit_horizontal_guides_ = [620.0]

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="ScrollingBackground" parent="Background" instance=ExtResource("2_g0mei")]

[node name="Progress" parent="." instance=ExtResource("3_fbry8")]
unique_name_in_owner = true

[node name="MenuCanvasLayer" type="CanvasLayer" parent="."]

[node name="Menu" type="MarginContainer" parent="MenuCanvasLayer"]
unique_name_in_owner = true
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 90.0
grow_horizontal = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MenuCanvasLayer/Menu"]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2

[node name="Control2" type="Control" parent="MenuCanvasLayer/Menu/HBoxContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MenuButton" parent="MenuCanvasLayer/Menu/HBoxContainer/Control2" instance=ExtResource("4_ib1uf")]
unique_name_in_owner = true
self_modulate = Color(0.0823529, 0.380392, 0.427451, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.5
offset_top = -37.5
offset_right = 184.5
offset_bottom = 174.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_pressed = ExtResource("5_wyxyw")
texture_hover = ExtResource("5_wyxyw")
texture_disabled = ExtResource("5_wyxyw")
texture_focused = ExtResource("5_wyxyw")
background_texture = ExtResource("5_wyxyw")
foreground_texture = ExtResource("6_0w6xn")

[node name="ScaleAndSound2" parent="MenuCanvasLayer/Menu/HBoxContainer/Control2/MenuButton" instance=ExtResource("7_l1ogx")]

[node name="Control" type="Control" parent="MenuCanvasLayer/Menu/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="PickMeCanvasLayer" parent="." instance=ExtResource("8_7vhxh")]
unique_name_in_owner = true
layer = 5

[node name="MarginContainer" type="MarginContainer" parent="PickMeCanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PickMeCanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="Control" type="Control" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="LabelMemorize" type="Label" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.996078, 0.556863, 0.235294, 1)
theme_override_colors/font_outline_color = Color(0.945098, 0.945098, 0.901961, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 20
text = "Memorize"
horizontal_alignment = 1

[node name="PaletteListener" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer/LabelMemorize" instance=ExtResource("9_rqqa1")]

[node name="MemorizeCardDisplay" type="Control" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_vertical = 6
mouse_filter = 2

[node name="Control5" type="Control" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="LabelDiscard" type="Label" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.996078, 0.556863, 0.235294, 1)
theme_override_colors/font_outline_color = Color(0.945098, 0.945098, 0.901961, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 40
text = "Aim at the
Target"
horizontal_alignment = 1

[node name="PaletteListener" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer/LabelDiscard" instance=ExtResource("9_rqqa1")]

[node name="Label3" type="Label" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.945098, 0.945098, 0.901961, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 20
text = "when discarding cards"
horizontal_alignment = 1

[node name="PaletteListener" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer/Label3" instance=ExtResource("9_rqqa1")]
background_color = 1
background_hover_color = 0
foreground_color = 3

[node name="Control3" type="Control" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="CardsAndTargetContainer" type="HBoxContainer" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 6
mouse_filter = 2
alignment = 1

[node name="CardDisplay" type="Control" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer/CardsAndTargetContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 6
mouse_filter = 2

[node name="Control" type="Control" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer/CardsAndTargetContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
mouse_filter = 2

[node name="TargetContainer" type="Control" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer/CardsAndTargetContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_vertical = 6
mouse_filter = 2

[node name="TargetDisplay" type="Sprite2D" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer/CardsAndTargetContainer/TargetContainer"]
unique_name_in_owner = true
scale = Vector2(0.25, 0.25)
texture = ExtResource("10_qsdly")

[node name="Control2" type="Control" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Explanation" type="VBoxContainer" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer/Explanation"]
layout_mode = 2
theme_override_colors/font_color = Color(0.996078, 0.556863, 0.235294, 1)
theme_override_colors/font_outline_color = Color(0.945098, 0.945098, 0.901961, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 40
text = "TO EARN MORE
POINTS"
horizontal_alignment = 1

[node name="PaletteListener" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer/Explanation/Label" instance=ExtResource("9_rqqa1")]

[node name="LetsGoButton" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer/Explanation" instance=ExtResource("10_p13dj")]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Let's go!"

[node name="BackToMenu" type="Button" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(0, 0.780392, 0.964706, 1)
theme_override_colors/font_hover_color = Color(0, 0.780392, 0.964706, 1)
theme_override_colors/font_pressed_color = Color(0, 0.780392, 0.964706, 1)
theme_override_colors/font_focus_color = Color(0, 0.780392, 0.964706, 1)
theme_override_colors/font_color = Color(0.513726, 0.156863, 0, 1)
theme_override_colors/font_outline_color = Color(0.945098, 0.945098, 0.901961, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 20
text = "Back"
flat = true
alignment = 0
autowrap_mode = 2

[node name="PaletteListener" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer/BackToMenu" instance=ExtResource("9_rqqa1")]

[node name="CenterContainer" type="CenterContainer" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Zones" parent="." instance=ExtResource("11_r8dxh")]
unique_name_in_owner = true

[node name="Cards" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_ypwvg")
bus = &"SFX"

[node name="FadeTransition" type="CanvasLayer" parent="."]
layer = 100

[node name="FadeTransition" parent="FadeTransition" instance=ExtResource("12_wnn4v")]
unique_name_in_owner = true
visible = false

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.15
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="CameraShaker" parent="Camera2D" instance=ExtResource("13_mqpfc")]
unique_name_in_owner = true
randomStrength = 10.0

[node name="Target" parent="." instance=ExtResource("14_7olmj")]
unique_name_in_owner = true
